Fix: Implement authentication