@@ -17,7 +17,6 @@ import java.util.Arrays;
 import java.util.List;
 import org.springframework.http.HttpMethod;
 
-
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -31,30 +30,28 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .csrf(csrf -> csrf.disable()) // Désactiver CSRF pour les API stateless
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Configurer CORS
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Session stateless
             .authorizeHttpRequests(authz -> authz
-            	    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-            	    .requestMatchers("/login", "/register", "/verifyEmail/**", "/error").permitAll()
-            	    .requestMatchers("/updateProfile").authenticated() // Only authenticated users can access this endpoint
-            	    .anyRequest().authenticated()
-            	)
-            
-            .addFilterBefore(new JWTAuthenticationFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class)
-            .addFilterBefore(new JWTAuthorizationFilter(), UsernamePasswordAuthenticationFilter.class);
+                    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                    .requestMatchers("/users/login", "/users/register", "/users/verifyEmail/**", "/error").permitAll() // Allow access to these endpoints without authentication
+                    .requestMatchers("/users/updateProfile").authenticated() 
+                    .anyRequest().authenticated() 
+                  )
+            .addFilterAfter(new JWTAuthenticationFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class)
+            .addFilterAfter(new JWTAuthorizationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
-
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Autoriser les requêtes depuis Angular
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Autoriser ces méthodes HTTP
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Autoriser ces en-têtes
-        configuration.setExposedHeaders(Arrays.asList("Authorization")); // Exposer l'en-tête Authorization
-        configuration.setAllowCredentials(true); // Autoriser les credentials (cookies, etc.)
+        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // Autoriser Angular
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Méthodes autorisées
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // En-têtes autorisés
+        configuration.setExposedHeaders(Arrays.asList("Authorization")); // En-têtes exposés
+        configuration.setAllowCredentials(true); // Autoriser les credentials
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration); // Appliquer à tous les endpoints
